<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <include layout="@layout/usb_picture_speed_tips"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </include>


    <RelativeLayout
        android:id="@+id/rl_full_screen_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.desaysv.usbpicture.view.CanScrollViewPager
            android:id="@+id/vpPicture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
<!--        <RelativeLayout
            android:id="@+id/rl_mask"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:src="@mipmap/img_up_shadow"></ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:src="@mipmap/img_down_shadow"></ImageView>
        </RelativeLayout>-->

    <LinearLayout
        android:id="@+id/ll_top_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="60px"
            android:layout_height="60px"
            android:background="@null"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="100dp"
            android:src="@drawable/back"
            android:contentDescription="@string/description_back"/>

        <ImageView
            android:id="@+id/btnEnlarge"
            android:layout_width="60px"
            android:layout_height="60px"
            android:src="@drawable/enlarge"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="70dp"
            android:contentDescription="@string/description_enlarge"
            />

        <ImageView
            android:id="@+id/btnNarrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:src="@drawable/narrow"
            android:contentDescription="@string/description_narrow"/>

        <ImageView
            android:id="@+id/btnFlip"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:src="@drawable/rotate"
            android:contentDescription="@string/description_flip"/>

        <ImageView
            android:id="@+id/btnSlide"
            android:layout_width="60px"
            android:layout_height="60px"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"
            android:src="@drawable/autoplay"
            android:contentDescription="@string/description_slide"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/usb_picture_margin_bottom">

            <ImageView
                android:id="@+id/btnPre"
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="100px"
                android:src="@drawable/pre"
                android:contentDescription="@string/description_pre"/>

            <ImageView
                android:id="@+id/stop_slide"
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_gravity="center"
                android:src="@drawable/start"
                android:contentDescription="@string/description_pause"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/btnNext"
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="100px"
                android:src="@drawable/next"
                android:contentDescription="@string/description_next"/>
        </LinearLayout>

    <TextView
        android:id="@+id/time_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/usb_picture_white"
        android:textSize="28px"
        android:visibility="gone" />


    <com.desaysv.usbpicture.view.CircularProgressView
        android:id="@+id/time_progress"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        app:backColor="@color/colorPrimary"
        app:backWidth="6dp"
        app:progColor="@color/colorAccent"
        app:progWidth="5dp"
        app:progress="0"
        android:visibility="gone"/>
    </RelativeLayout>
</RelativeLayout>